--- a/.github/workflows/app-hub-deploy-matrix.yml
+++ b/.github/workflows/app-hub-deploy-matrix.yml
@@ -22,13 +22,16 @@ jobs:
                 baseurl: ['https://debug.dhis2.org/dev', 'https://play.dhis2.org/dev']
                 include: 
                   - baseurl: 'https://debug.dhis2.org/dev'
+                    name: 'DEBUG'
                     username: 'admin'
-                    password: ${{ env.DHIS2_DEBUG_PASSWORD }}
                   - baseurl: 'https://play.dhis2.org/dev'
+                    name: 'PLAY'
                     username: 'admin'
-                    password: ${{ env.DHIS2_PLAY_PASSWORD }}
         runs-on: ubuntu-latest
         steps:
+            # include does not support dynamic values, so we need to set the password as an environment variable
+            - name: Set password environment variable
+              run: echo "D2_PASSWORD=$(echo $DHIS2_${{ matrix.name }}_PASSWORD)" >> $GITHUB_ENV
             - uses: actions/checkout@v2
             - uses: actions/setup-node@v2
               with:
