--- a/.github/workflows/app-hub-deploy-matrix.yml
+++ b/.github/workflows/app-hub-deploy-matrix.yml
@@ -20,17 +20,17 @@ jobs:
             matrix:
                 include: 
                   - baseurl: 'https://debug.dhis2.org/dev'
-                    name: 'DEBUG' # needs to match the environment variable name
                     username: 'admin'
+                    password-env: 'DHIS2_DEBUG_PASSWORD' # needs to match the environment variable name
                   - baseurl: 'https://play.dhis2.org/dev'
-                    name: 'PLAY'
                     username: 'admin'
+                    password-env: 'DHIS2_PLAY_PASSWORD'
         runs-on: ubuntu-latest
         steps:
             # include does not support dynamic values, so we need to set the password as an environment variable
             # NOTE: DHIS2_${{matrix.name}}_PASSWORD needs to match env-variables!
             - name: Set password environment variable
-              run: echo "D2_PASSWORD=$(echo $DHIS2_${{ matrix.name }}_PASSWORD)" >> $GITHUB_ENV
+              run: echo "D2_PASSWORD=$(echo ${{ matrix.password-env }})" >> $GITHUB_ENV
             - uses: actions/checkout@v3
             - uses: actions/setup-node@v3
               with:
