--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,4 +1,4 @@
-name: 'release app'
+name: 'publish app'
 
 on:
     push:
@@ -17,7 +17,7 @@ env:
 
 jobs:
     build:
-        if: ${{ contains(github.event.head_commit.message, '[defer release]') }}
+        if: ${{ contains(github.event.head_commit.message, '[skip release]') }}
         runs-on: ubuntu-latest
         steps:
             - uses: actions/checkout@v3
