fix: do github publish before apphub

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dhis2-ci-app-demo",
+  "name": "jennifer-demo-app",
   "version": "1.0.2",
   "description": "",
   "license": "BSD-3-Clause",
