chore: release workflow

--- a/.github/workflows/pre-release.yml
+++ b/.github/workflows/pre-release.yml
@@ -3,7 +3,7 @@ name: 'prepare release'
 on:
     push:
         branches:
-            - 'main'
+            - 'master'
 
 env:
     GIT_AUTHOR_NAME: 'jenjonesarnesen'
