--- a/package.json
+++ b/package.json
@@ -15,5 +15,34 @@
   },
   "dependencies": {
     "@dhis2/app-runtime": "^3.9.4"
+  },
+  "release": {
+    "branches": [
+      "main"
+    ],
+    "plugins": [
+      "@semantic-release/commit-analyzer",
+      "@semantic-release/release-notes-generator",
+      "@semantic-release/changelog",
+      "@semantic-release/npm",
+      [
+        "@semantic-release/exec",
+        {
+          "prepareCmd": "yarn build"
+        }
+      ],
+      "@semantic-release/git",
+      [
+        "@semantic-release/github",
+        {
+          "assets": [
+            {
+              "path": "build/bundle/*.zip",
+              "label": "DHIS2 app bundle"
+            }
+          ]
+        }
+      ]
+    ]
   }
 }
