--- a/.github/release.yml
+++ b/.github/release.yml
@@ -15,9 +15,24 @@ env:
     CI: true
 
 jobs:
+    lint:
+        runs-on: ubuntu-latest
+        steps:
+            - uses: actions/checkout@v3
+            - uses: actions/setup-node@v3
+              with:
+                  node-version: 18.x
+
+            - name: Install
+              run: yarn install --frozen-lockfile
+
+            - name: Lint
+              run: yarn d2-style check
+
     release:
         if: ${{ !contains(github.event.head_commit.message, '[skip release]') }}
         runs-on: ubuntu-latest
+        needs: lint
         steps:
             - uses: actions/checkout@v3
               with:
