--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,7 +25,7 @@ jobs:
 
             - uses: actions/setup-node@v3
               with:
-                  node-version: 20.x
+                  node-version: 18.x
 
             - name: Install
               run: yarn install --frozen-lockfile
@@ -33,5 +33,5 @@ jobs:
             - name: Run Semantic Release
               env:
                 GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-              run: npx semantic-release 
+              run: npx -p semantic-release@20.0.0 semantic-release
             
