--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,7 +16,7 @@ env:
 
 jobs:
     release:
-        if: ${{ !contains(github.event.head_commit.message, '[skip release]') }}
+        if: ${{ !contains(github.event.head_commit.message, '[skip ci]') }}
         runs-on: ubuntu-latest
         steps:
             - uses: actions/checkout@v3
