fix: maybe apphub token was missing

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -37,4 +37,6 @@ jobs:
 
             - name: Publish to AppHub
               run: yarn run d2-app-scripts publish
+              env:
+                APPHUB_TOKEN: ${{ secrets.APPHUB_TOKEN }}
             
