fix: why am i unauthorized to publish to apphub

--- a/package.json
+++ b/package.json
@@ -35,7 +35,16 @@
           "prepareCmd": "yarn build"
         }
       ],
-      "@semantic-release/git",
+      [
+        "@semantic-release/git",
+        {
+          "assets": [
+            "CHANGELOG.md",
+            "package.json"
+          ],
+          "message": "chore(release): cut ${nextRelease.version} [skip release]\n\n${nextRelease.notes}"
+        }
+      ]
       [
         "@semantic-release/github",
         {
