--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "deploy": "d2-app-scripts deploy"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@dhis2/cli-app-scripts": "^11.6.1",
     "@semantic-release/changelog": "^5",
     "@semantic-release/exec": "^6.0.3",
