--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,7 +11,8 @@ env:
     GIT_COMMITTER_NAME: 'jenjonesarnesen'
     GIT_COMMITTER_EMAIL: 'jennifer@dhis2.org'
     GH_TOKEN: ${{secrets.GH_TOKEN}}
-    APPHUB_TOKEN: ${{secrets.APPHUB_TOKEN}}
+    D2_APP_HUB_API_KEY: ${{secrets.APPHUB_TOKEN}}
+    D2_APP_HUB_TOKEN: ${{ secrets.APPHUB_TOKEN }}
     CI: true
 
 jobs:
@@ -37,6 +38,4 @@ jobs:
 
             - name: Publish to AppHub
               run: yarn run d2-app-scripts publish
-              env:
-                D2_APP_HUB_TOKEN: ${{ secrets.APPHUB_TOKEN }}
             
