--- a/.releaserc
+++ b/.releaserc
@@ -3,7 +3,22 @@
         "main"
     ],
     "plugins": [
-        "@semantic-release/commit-analyzer",
+        [
+            "@semantic-release/commit-analyzer",
+            {
+                "preset": "conventionalcommits",
+                "releaseRules": [
+                    {
+                        "message": "skip release",
+                        "release": false
+                    },
+                    {
+                        "message": "skip ci",
+                        "release": false
+                    }
+                ]
+            }
+        ],
         "@semantic-release/release-notes-generator",
         "@semantic-release/changelog",
         "@semantic-release/npm",
