--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,7 +10,7 @@ env:
     GIT_AUTHOR_EMAIL: 'jennifer@dhis2.org'
     GIT_COMMITTER_NAME: 'jenjonesarnesen'
     GIT_COMMITTER_EMAIL: 'jennifer@dhis2.org'
-    GH_TOKEN: ${{secrets.GH_TOKEN}}
+    GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     D2_APP_HUB_TOKEN: ${{secrets.DHIS2_BOT_APPHUB_TOKEN}}
     CI: true
 
@@ -20,7 +20,7 @@ jobs:
         steps:
             - uses: actions/checkout@v3
               with:
-                  token: ${{ env.GH_TOKEN }}
+                  token: ${{ secrets.GITHUB_TOKEN }}
 
             - uses: actions/setup-node@v3
               with:
